# proj

./: Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/proj-cli/: Cargo.toml
crates/proj-cli/src/: main.rs
crates/proj-common/: Cargo.toml
crates/proj-common/src/: lib.rs
crates/proj-daemon/: Cargo.toml
crates/proj-daemon/src/: ipc.rs  main.rs  process.rs  proxy.rs  registry.rs
