[package]
name = "proj-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "proj-daemon"
path = "src/main.rs"

[dependencies]
proj-common = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
